include/bison_c.h


typedef struct bison_handle_* bison_handle;
typedef uint32_t bison_hash;
typedef enum bison_error {
  BISON_OK = 0, 
  BISON_ERR_NULL = -1, 
  BISON_ERR_TYPE = -2, 
  BISON_ERR_NOT_FOUND = -3, 
  BISON_ERR_DUPLICATE = -4, 
  BISON_ERR_EXCEPTION = -5, 
  BISON_ERR_PARSE = -6, 
} bison_error;
typedef struct bison_attributes {
  const char* display_name; 
  const char* description; 
  const char* category; 
  int obsolete; 
  const char* obsolete_message; 
  int required; 
} bison_attributes;
BISON_API bison_error bison_add_field_vector_bool(
    bison_handle obj, bison_hash key, const int* values, size_t count, const bison_attributes* meta);
BISON_API bison_error bison_add_field_vector_int(
    bison_handle obj, bison_hash key, const int32_t* values, size_t count, const bison_attributes* meta);
BISON_API bison_error bison_add_field_vector_float(
    bison_handle obj, bison_hash key, const float* values, size_t count, const bison_attributes* meta);
BISON_API bison_error bison_add_field_vector_bytes(
    bison_handle obj, bison_hash key, const uint8_t* values, size_t count, const bison_attributes* meta);
BISON_API bison_hash bison_key(const char* name);