bindings/csharp/Bison/Native.cs


    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_vector_bool(nint obj, uint key, int[]? values, nuint count, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_vector_int(nint obj, uint key, int[]? values, nuint count, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_vector_float(nint obj, uint key, float[]? values, nuint count, NativeAttributes* meta);

    [LibraryImport(LibName)]
    public static unsafe partial int bison_add_field_vector_bytes(nint obj, uint key, byte[]? values, nuint count, NativeAttributes* meta);

    // ── Vector field access ──────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_get_vector_bool(nint h, uint name, int[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_get_vector_int(nint h, uint name, int[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_get_vector_float(nint h, uint name, float[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_get_vector_bytes(nint h, uint name, byte[]? buf, nuint bufLen, out nuint lenOut);

    [LibraryImport(LibName)]
    public static partial int bison_set_vector_bool(nint h, uint name, int[]? values, nuint count);

    [LibraryImport(LibName)]
    public static partial int bison_set_vector_int(nint h, uint name, int[]? values, nuint count);

    [LibraryImport(LibName)]
    public static partial int bison_set_vector_float(nint h, uint name, float[]? values, nuint count);

    [LibraryImport(LibName)]
    public static partial int bison_set_vector_bytes(nint h, uint name, byte[]? values, nuint count);

    // ── Binary serialization ─────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int bison_serialize(nint h, out nint out_, out nuint outLen);

    [LibraryImport(LibName)]
    public static partial int bison_deserialize(byte[]? data, nuint len, out nint out_);

    [LibraryImport(LibName)]
    public static partial void bison_free_buffer(nint buf);

    // ── Utility ───────────────────────────────────────────────────────────────

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial uint bison_key(string name);

    // ── rmi_c.h: futures ──────────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial int rmi_future_wait(nint future, long timeoutMs);

    [LibraryImport(LibName)]
    public static partial int rmi_future_get_dynamic(ref nint future, out nint outValue);

    [LibraryImport(LibName)]
    public static partial int rmi_future_get_proxy(ref nint future, out nint outProxy);

    [LibraryImport(LibName)]
    public static partial void rmi_future_release(nint future);

    // ── rmi_c.h: client ───────────────────────────────────────────────────────

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_client_tcp_create(string host, ushort port);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_client_tls_create(string host, ushort port);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_client_pipe_create(string path);

    [LibraryImport(LibName)]
    public static partial nint rmi_client_term_create();

    [LibraryImport(LibName)]
    public static partial nint rmi_standalone_create();

    [LibraryImport(LibName)]
    public static partial int rmi_client_connect(nint client, nint parameters);

    [LibraryImport(LibName)]
    public static partial int rmi_client_describe(nint client, uint ns, uint klass, out nint outDesc);

    [LibraryImport(LibName)]
    public static partial int rmi_client_describe_async(nint client, uint ns, uint klass, out nint outFuture);

    [LibraryImport(LibName)]
    public static partial int rmi_client_instantiate(nint client, uint ns, uint klass, nint parameters, out nint outProxy);

    [LibraryImport(LibName)]
    public static partial int rmi_client_instantiate_async(nint client, uint ns, uint klass, nint parameters, out nint outFuture);

    [LibraryImport(LibName)]
    public static partial int rmi_client_disconnect(nint client);

    [LibraryImport(LibName)]
    public static partial void rmi_client_release(nint client);

    // ── rmi_c.h: proxy ────────────────────────────────────────────────────────

    [LibraryImport(LibName)]
    public static partial void rmi_proxy_release(nint proxy);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_on_event(nint proxy, uint eventName, nint handler, nint user);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_clear(nint proxy, long timeoutMs);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_clear_async(nint proxy, out nint outFuture);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_set(nint proxy, nint fields, long timeoutMs);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_set_async(nint proxy, nint fields, out nint outFuture);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_get(nint proxy, nint projection, out nint outResult, long timeoutMs);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_get_async(nint proxy, nint projection, out nint outFuture);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_call(nint proxy, uint method, nint parameters, out nint outResult, long timeoutMs);

    [LibraryImport(LibName)]
    public static partial int rmi_proxy_call_async(nint proxy, uint method, nint parameters, out nint outFuture);

    // ── rmi_c.h: server ───────────────────────────────────────────────────────

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_server_tcp_create(string host, ushort port);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_server_tls_create(string host, ushort port);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_server_pipe_create(string path);

    [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf8)]
    public static partial nint rmi_server_term_create(string? cmd);

    [LibraryImport(LibName)]
    public static partial int rmi_server_listen(nint server, nint parameters, nint authHandler, nint authUser);

    [LibraryImport(LibName)]
    public static partial void rmi_server_stop(nint server);

    [LibraryImport(LibName)]
    public static partial void rmi_server_release(nint server);
}
